components/jumi/deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jumi
  namespace: jumi-system
spec:
  selector:
    app: jumi
  ports:
    - name: metrics
      port: 8080
      targetPort: 8080
    - name: health
      port: 8081
      targetPort: 8081
